--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,20 @@
 {
-  "name": "foundation-compass-app",
+  "name": "boat-loader=app",
   "version": "0.0.1",
   "private": "true",
   "dependencies": {
-    "foundation": "zurb/bower-foundation"
+    "angular-resource": "latest",
+    "angular-cookies": "latest",
+    "angular-route": "latest",
+    "angular-ui-utils": "0.0.4",
+    "angular-ui-date": "latest",
+    "angularjs-file-upload": "latest",
+    "momentjs": "latest",
+    "ng-csv": "latest",
+    "foundation": "zurb/bower-foundation",
+    "angular": "latest"
+  },
+  "resolutions": {
+    "angular": "1.2.6"
   }
 }
